カメラの操作感を調整し、MMD互換の入力割り当てを追加しました。また、右クリックメニューを抑止し、カメラの安定性を向上させました。

--- a/data/vis/visualize_new.html
+++ b/data/vis/visualize_new.html
@@ -185,18 +185,28 @@
         new BABYLON.Vector3(0, 1, 0),
         scene
       );
-      camera.attachControl(canvas, true);
+
+      camera.attachControl(canvas, false);
+
+      // 入力割り当て（MMD互換）
       const pointerInput = camera.inputs.attached.pointers;
-      if (pointerInput) {
-        pointerInput.buttons = [2];
-        if ("panningButton" in pointerInput) {
-          pointerInput.panningButton = 1;
-        }
-      }
-      canvas.addEventListener("contextmenu", (ev) => ev.preventDefault());
+      pointerInput.buttons = [1, 2];   // 中・右
+      pointerInput.panningButton = 1;  // 中＝パン
+
+      // 操作感調整
+      camera.angularSensibilityX = 1200;
+      camera.angularSensibilityY = 1200;
+      camera.panningSensibility = 1000;
       camera.wheelPrecision = 50;
-      camera.minZ = 0.001;
+
+      // 安定性
+      camera.lowerBetaLimit = 0.01;
+      camera.upperBetaLimit = Math.PI - 0.01;
       camera.lowerRadiusLimit = 0.2;
+      camera.minZ = 0.001;
+
+      // 右クリックメニュー抑止
+      canvas.addEventListener("contextmenu", ev => ev.preventDefault());
 
       const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
       light.intensity = 0.9;
@@ -366,7 +376,9 @@
         if (!joints) {
           return false;
         }
-        const humanIndex = extractHumanIndex(label, fallbackIndex);
+        const humanIndex = parsed.human_index !== undefined
+          ? parsed.human_index
+          : extractHumanIndex(label, fallbackIndex);
         const datasetId = "dataset_" + humanIndex + "_" + datasets.length;
         const dataset = {
           id: datasetId,
